--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.23.2"
+    "sequelize": "^6.23.2",
+    "tedious": "^15.1.0"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
